# Kitee

./: .gitignore  BUILD_CONFIG.md  README.md  build.py  build.sh  pyproject.toml
.github/workflows/: dev-1.0.yml  dev.yml
kitee_launcher/: __init__.py  background.py  front.py  gui.py  main.py
kitee_launcher/bk_core/: __init__.py
kitee_launcher/bk_core/account/: account_management.py  auth_process.py  mojang_api.py  msa.py  yggdrasil.py
kitee_launcher/bk_core/clientlauncher/: clauncher.py
kitee_launcher/bk_core/definition/: data.py
kitee_launcher/bk_core/duke/: explorer_library.py
kitee_launcher/bk_core/game/: game_files.py  manifest.py
kitee_launcher/bk_core/game/version/: version.py
kitee_launcher/bk_core/instance/: instance.py  legacy.py
kitee_launcher/bk_core/java/: jvm_installer.py
kitee_launcher/bk_core/libraries/: libraries.py
kitee_launcher/bk_core/mod/: fabric.py  forge.py  loader_args.py  mod_installer.py
kitee_launcher/managers/: account_manager.py  instance_creator.py  instance_manager.py  jre_manager.py  launch_manager.py  mod_loader_rules.py
kitee_launcher/resources/locales/: en_US.json  lang_checker.py  zh-TW.json
kitee_launcher/resources/scripts/: detached.js  home.js  instance.js  instance_creator.js  shared.js
kitee_launcher/resources/styles/: home.css
kitee_launcher/resources/templates/: create_instance.html  detached_tab.html  home.html  instance_window.html
